add Angular Material and form validation

--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -29,3 +29,17 @@
   }
 
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+mat-error {
+  display: none !important;
+}
+.mat-mdc-form-field-error-wrapper .invalid-feedback{
+  display:inline;
+}
+
+
+
